# Moosical

./: Cargo.toml  config.toml  example_config.toml  search_yt.py
src/: lib.rs  main.rs
src/commands/: mod.rs  ping.rs  search.rs
src/commands/application/: mod.rs  ping.rs  search.rs
src/commands/message/: mod.rs  search.rs
src/helpers/: mod.rs  youtube.rs
src/helpers/youtube/: download.rs  search.rs
src/state/: mod.rs
