[package]
name = "moosicyak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.52"
futures = "0.3.18"
rafy = "0.2.1"
rayon = "1.5.1"
serde = { version = "1.0.133", features = ["derive"] }
tokio = { version = "1.14.0", features = ["full"] }
tokio-test = "0.4.2"
toml = "0.5.8"
twilight = "0.8.0"
twilight-cache = "0.0.0"
twilight-cache-inmemory = "0.8.0"
twilight-command-parser = "0.8.0"
twilight-embed-builder = "0.8.0"
twilight-gateway = "0.8.0"
twilight-http = "0.8.0"
twilight-model = "0.8.0"
twilight-util = { version = "0.8.0", features = ["builder", "link"] }
url = "2.2.2"
youtube_dl = "0.6.3"
