[package]
name = "moosicyak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.52"
futures = "0.3.18"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1.14.0", features = ["full"] }
toml = "0.5.8"
twilight-cache-inmemory = "0.8.0"
twilight-gateway = "0.8.0"
twilight-http = "0.8.0"
twilight-model = "0.8.0"
twilight-util = { version = "0.8.0", features = ["builder", "link"] }
url = "2.2.2"
youtube_dl = "0.6.3"
